--- a/app.html
+++ b/app.html
@@ -80,3 +80,6 @@
   <script src="js/app.js"></script>
 </body>
 </html>
+<div class="text-end mb-4">
+  <button id="exportBtn" class="btn btn-outline-primary">Exportar a Excel</button>
+</div>
