--- a/app.html
+++ b/app.html
@@ -7,6 +7,8 @@
   <link rel="stylesheet" href="css/style.css" />
   <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/css/bootstrap.min.css" rel="stylesheet" />
   <script src="https://cdn.jsdelivr.net/npm/sweetalert2@11"></script>
+  
+  <!-- Firebase SDK compat -->
   <script src="https://www.gstatic.com/firebasejs/9.6.1/firebase-app-compat.js"></script>
   <script src="https://www.gstatic.com/firebasejs/9.6.1/firebase-auth-compat.js"></script>
   <script src="https://www.gstatic.com/firebasejs/9.6.1/firebase-firestore-compat.js"></script>
@@ -61,6 +63,11 @@
       </div>
     </form>
 
+    <!-- Botón de exportación -->
+    <div class="text-end mb-4">
+      <button id="exportBtn" class="btn btn-outline-primary">Exportar a Excel</button>
+    </div>
+
     <table class="table table-bordered">
       <thead class="table-light">
         <tr>
@@ -78,8 +85,6 @@
 
   <script src="js/firebase.js"></script>
   <script src="js/app.js"></script>
+  <script src="https://cdnjs.cloudflare.com/ajax/libs/xlsx/0.18.5/xlsx.full.min.js"></script>
 </body>
 </html>
-<div class="text-end mb-4">
-  <button id="exportBtn" class="btn btn-outline-primary">Exportar a Excel</button>
-</div>
