--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
 </head>
 <body>
   <div class="container mt-5">
-    <h2 class="text-center mb-4">Planilla Bádminton Argentina</h2>
+    <h2 class="text-center mb-4">🏸 Planilla Bádminton Argentina</h2>
     <form id="loginForm" class="col-md-6 offset-md-3 p-4 border rounded bg-white shadow">
       <div class="mb-3">
         <label for="loginUser" class="form-label">Correo electrónico</label>
