--- a/app.html
+++ b/app.html
@@ -7,7 +7,7 @@
   <link rel="stylesheet" href="css/style.css" />
   <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/css/bootstrap.min.css" rel="stylesheet" />
   <script src="https://cdn.jsdelivr.net/npm/sweetalert2@11"></script>
-  
+
   <!-- Firebase SDK compat -->
   <script src="https://www.gstatic.com/firebasejs/9.6.1/firebase-app-compat.js"></script>
   <script src="https://www.gstatic.com/firebasejs/9.6.1/firebase-auth-compat.js"></script>
@@ -24,18 +24,62 @@
       </div>
     </div>
 
+    <!-- Formulario de carga de entrenamiento -->
+    <form id="formEntrenamiento" class="row g-3 mb-4 p-3 bg-white shadow rounded">
+      <div class="col-md-2">
+        <input type="date" id="fecha" class="form-control" required />
+      </div>
+      <div class="col-md-2">
+        <select id="categoria" class="form-select" required>
+          <option value="">Categoría</option>
+          <option value="Adultos">Adultos</option>
+          <option value="Juveniles">Juveniles</option>
+        </select>
+      </div>
+      <div class="col-md-2">
+        <select id="tipoTrabajo" class="form-select" required>
+          <option value="">Tipo de Trabajo</option>
+          <option value="Multipluma">Multipluma</option>
+          <option value="Consistencia">Consistencia</option>
+          <option value="Partidos">Partidos</option>
+        </select>
+      </div>
+      <div class="col-md-2">
+        <select id="modalidad" class="form-select" required>
+          <option value="">Modalidad</option>
+          <option value="Singles">Singles</option>
+          <option value="Dobles">Dobles</option>
+          <option value="Dobles Mixto">Dobles Mixto</option>
+        </select>
+      </div>
+      <div class="col-md-2">
+        <select id="carga" class="form-select" required>
+          <option value="">Carga</option>
+          <option value="30%">30%</option>
+          <option value="60%">60%</option>
+          <option value="90%">90%</option>
+        </select>
+      </div>
+      <div class="col-md-12">
+        <textarea id="descripcion" class="form-control" rows="2" placeholder="Descripción del entrenamiento" required></textarea>
+      </div>
+      <div class="col-md-12 text-end">
+        <button class="btn btn-success">Guardar entrenamiento</button>
+      </div>
+    </form>
+
     <!-- Filtros -->
     <div class="row g-3 mb-4">
       <div class="col-md-3">
         <select id="filtroCategoria" class="form-select">
-          <option value="">Todas las Categorías</option>
+          <option value="">Filtrar Categoría</option>
           <option value="Adultos">Adultos</option>
           <option value="Juveniles">Juveniles</option>
         </select>
       </div>
       <div class="col-md-3">
         <select id="filtroModalidad" class="form-select">
-          <option value="">Todas las Modalidades</option>
+          <option value="">Filtrar Modalidad</option>
           <option value="Singles">Singles</option>
           <option value="Dobles">Dobles</option>
           <option value="Dobles Mixto">Dobles Mixto</option>
@@ -43,19 +87,18 @@
       </div>
       <div class="col-md-3">
         <select id="filtroTrabajo" class="form-select">
-          <option value="">Todos los Trabajos</option>
+          <option value="">Filtrar Trabajo</option>
           <option value="Multipluma">Multipluma</option>
           <option value="Consistencia">Consistencia</option>
           <option value="Partidos">Partidos</option>
         </select>
       </div>
       <div class="col-md-3 text-end">
-        <button id="exportBtn" class="btn btn-primary">
-          📥 Exportar a Excel
-        </button>
+        <button id="exportBtn" class="btn btn-primary">📥 Exportar a Excel</button>
       </div>
     </div>
 
+    <!-- Tabla -->
     <table class="table table-bordered table-hover">
       <thead class="table-light">
         <tr>
