--- a/app.html
+++ b/app.html
@@ -20,7 +20,8 @@
       <div>
         <span id="userEmail" class="me-3 fw-bold"></span>
         <span class="badge bg-secondary" id="userRol"></span>
-        <button id="logoutBtn" class="btn btn-outline-danger btn-sm ms-3">Cerrar sesión</button>
+        <button id="darkModeBtn" class="btn btn-outline-dark btn-sm ms-2">🌙</button> <!-- BOTÓN AGREGADO -->
+        <button id="logoutBtn" class="btn btn-outline-danger btn-sm ms-2">Cerrar sesión</button>
       </div>
     </div>
 
