--- a/app.html
+++ b/app.html
@@ -20,7 +20,7 @@
       <div>
         <span id="userEmail" class="me-3 fw-bold"></span>
         <span class="badge bg-secondary" id="userRol"></span>
-        <button id="darkModeBtn" class="btn btn-outline-dark btn-sm ms-2">🌙</button> <!-- BOTÓN AGREGADO -->
+        <button id="darkModeBtn" class="btn btn-outline-dark btn-sm ms-2">🌙</button>
         <button id="logoutBtn" class="btn btn-outline-danger btn-sm ms-2">Cerrar sesión</button>
       </div>
     </div>
@@ -43,6 +43,8 @@
           <option value="Multipluma">Multipluma</option>
           <option value="Consistencia">Consistencia</option>
           <option value="Partidos">Partidos</option>
+          <option value="Técnica">Técnica</option>
+          <option value="Drills">Drills</option>
         </select>
       </div>
       <div class="col-md-2">
@@ -56,9 +58,16 @@
       <div class="col-md-2">
         <select id="carga" class="form-select" required>
           <option value="">Carga</option>
+          <option value="10%">10%</option>
+          <option value="20%">20%</option>
           <option value="30%">30%</option>
+          <option value="40%">40%</option>
+          <option value="50%">50%</option>
           <option value="60%">60%</option>
+          <option value="70%">70%</option>
+          <option value="80%">80%</option>
           <option value="90%">90%</option>
+          <option value="100%">100%</option>
         </select>
       </div>
       <div class="col-md-12">
@@ -92,6 +101,8 @@
           <option value="Multipluma">Multipluma</option>
           <option value="Consistencia">Consistencia</option>
           <option value="Partidos">Partidos</option>
+          <option value="Técnica">Técnica</option>
+          <option value="Drills">Drills</option>
         </select>
       </div>
       <div class="col-md-3 text-end">
