--- a/app.html
+++ b/app.html
@@ -115,13 +115,14 @@
       <thead class="table-light">
         <tr>
           <th>Fecha</th>
-          <th>Categoría</th>
-          <th>Trabajo</th>
-          <th>Modalidad</th>
-          <th>Carga</th>
-          <th>Descripción</th>
-        </tr>
-      </thead>
+    <th>Categoría</th>
+    <th>Trabajo</th>
+    <th>Modalidad</th>
+    <th>Carga</th>
+    <th>Descripción</th>
+    <th>Acciones</th> <!-- 🔥 Nueva columna para Editar y Eliminar -->
+  </tr>
+</thead>
       <tbody id="tablaEntrenamientos"></tbody>
     </table>
   </div>
