--- a/app.html
+++ b/app.html
@@ -4,6 +4,10 @@
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
   <title>Entrenamientos | Planilla Bádminton Argentina</title>
+
+  <!-- 🎨 Fuente Poppins agregada -->
+  <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@400;600&display=swap" rel="stylesheet">
+
   <link rel="stylesheet" href="css/style.css" />
   <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/css/bootstrap.min.css" rel="stylesheet" />
   <script src="https://cdn.jsdelivr.net/npm/sweetalert2@11"></script>
@@ -115,14 +119,14 @@
       <thead class="table-light">
         <tr>
           <th>Fecha</th>
-    <th>Categoría</th>
-    <th>Trabajo</th>
-    <th>Modalidad</th>
-    <th>Carga</th>
-    <th>Descripción</th>
-    <th>Acciones</th> <!-- 🔥 Nueva columna para Editar y Eliminar -->
-  </tr>
-</thead>
+          <th>Categoría</th>
+          <th>Trabajo</th>
+          <th>Modalidad</th>
+          <th>Carga</th>
+          <th>Descripción</th>
+          <th>Acciones</th>
+        </tr>
+      </thead>
       <tbody id="tablaEntrenamientos"></tbody>
     </table>
   </div>
