--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
     }
   </style>
 
-  <link rel="stylesheet" href="css/style_v2.css" />
+  <link rel="stylesheet" href="css/style.css" />
   <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/css/bootstrap.min.css" rel="stylesheet" />
   <script src="https://cdn.jsdelivr.net/npm/sweetalert2@11"></script>
 
