--- a/app.html
+++ b/app.html
@@ -68,17 +68,12 @@
       </div>
       <div class="col-md-2">
         <select id="carga" class="form-select" required>
-          <option value="">Carga</option>
-          <option value="10%">10%</option>
-          <option value="20%">20%</option>
-          <option value="30%">30%</option>
-          <option value="40%">40%</option>
-          <option value="50%">50%</option>
-          <option value="60%">60%</option>
-          <option value="70%">70%</option>
-          <option value="80%">80%</option>
-          <option value="90%">90%</option>
-          <option value="100%">100%</option>
+          <option value="">Carga (Borg)</option>
+          <option value="1 - Regenerativo">1 - Regenerativo</option>
+          <option value="2 - Aeróbico Bajo">2 - Aeróbico Bajo</option>
+          <option value="3 - Aeróbico Alto">3 - Aeróbico Alto</option>
+          <option value="4 - Aeróbico Anaeróbico">4 - Aeróbico Anaeróbico</option>
+          <option value="5 - Anaeróbico">5 - Anaeróbico</option>
         </select>
       </div>
       <div class="col-md-12">
