--- a/app.html
+++ b/app.html
@@ -1,3 +1,4 @@
+<!-- Reemplazá tu app.html por este completo -->
 <!DOCTYPE html>
 <html lang="es">
 <head>
@@ -7,8 +8,6 @@
 
   <!-- 🎨 Fuente Poppins agregada -->
   <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@400;600&display=swap" rel="stylesheet">
-
-  <!-- 🎨 Forzar Poppins en toda la página -->
   <style>
     * {
       font-family: 'Poppins', 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif !important;
@@ -126,6 +125,7 @@
           <th>Modalidad</th>
           <th>Carga</th>
           <th>Descripción</th>
+          <th>Notas</th> <!-- 🔥 Nueva columna -->
           <th>Acciones</th>
         </tr>
       </thead>
