--- a/register.html
+++ b/register.html
@@ -23,6 +23,9 @@
         <label for="registerPass" class="form-label">Contraseña</label>
         <input type="password" id="registerPass" class="form-control" required />
       </div>
+
+      <!-- El rol ya no se selecciona, se asigna automáticamente desde auth.js -->
+
       <button type="submit" class="btn btn-success w-100">Registrarse</button>
       <p class="text-center mt-3">¿Ya tenés cuenta? <a href="index.html">Iniciar sesión</a></p>
     </form>
