--- a/app.html
+++ b/app.html
@@ -1,4 +1,3 @@
-<!-- Reemplazá tu app.html por este completo -->
 <!DOCTYPE html>
 <html lang="es">
 <head>
@@ -6,7 +5,7 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
   <title>Entrenamientos | Planilla Bádminton Argentina</title>
 
-  <!-- 🎨 Fuente Poppins agregada -->
+  <!-- 🎨 Fuente Poppins -->
   <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@400;600&display=swap" rel="stylesheet">
   <style>
     * {
@@ -16,6 +15,8 @@
 
   <link rel="stylesheet" href="css/style.css" />
   <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/css/bootstrap.min.css" rel="stylesheet" />
+  <link href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.10.5/font/bootstrap-icons.css" rel="stylesheet" /> <!-- ✅ Agregado -->
+
   <script src="https://cdn.jsdelivr.net/npm/sweetalert2@11"></script>
 
   <!-- Firebase SDK compat -->
@@ -125,7 +126,7 @@
           <th>Modalidad</th>
           <th>Carga</th>
           <th>Descripción</th>
-          <th>Notas</th> <!-- 🔥 Nueva columna -->
+          <th>Notas</th> <!-- ✅ Columna nueva -->
           <th>Acciones</th>
         </tr>
       </thead>
