--- a/app.html
+++ b/app.html
@@ -15,7 +15,7 @@
 
   <link rel="stylesheet" href="css/style.css" />
   <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/css/bootstrap.min.css" rel="stylesheet" />
-  <link href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.10.5/font/bootstrap-icons.css" rel="stylesheet" /> <!-- ✅ Agregado -->
+  <link href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.10.5/font/bootstrap-icons.css" rel="stylesheet" />
 
   <script src="https://cdn.jsdelivr.net/npm/sweetalert2@11"></script>
 
@@ -116,6 +116,11 @@
       </div>
     </div>
 
+    <!-- 📊 Estadísticas visuales (Etapa 4) -->
+    <div id="estadisticasResumen" class="row g-3 mb-4">
+      <!-- Tarjetas generadas dinámicamente -->
+    </div>
+
     <!-- Tabla -->
     <table class="table table-bordered table-hover">
       <thead class="table-light">
@@ -126,7 +131,7 @@
           <th>Modalidad</th>
           <th>Carga</th>
           <th>Descripción</th>
-          <th>Notas</th> <!-- ✅ Columna nueva -->
+          <th>Notas</th>
           <th>Acciones</th>
         </tr>
       </thead>
