--- a/app.html
+++ b/app.html
@@ -116,9 +116,21 @@
       </div>
     </div>
 
+    <!-- 🔄 NUEVO: Filtros activos -->
+    <div class="mb-3" id="filtrosActivosContainer" style="display: none;">
+      <span class="me-2 fw-bold">Filtros activos:</span>
+      <span id="filtrosActivos" class="badge bg-info text-dark me-2"></span>
+      <button id="limpiarFiltros" class="btn btn-outline-secondary btn-sm">Limpiar filtros</button>
+    </div>
+
     <!-- 📊 Estadísticas visuales (Etapa 4) -->
     <div id="estadisticasResumen" class="row g-3 mb-4">
       <!-- Tarjetas generadas dinámicamente -->
+    </div>
+
+    <!-- 🔢 NUEVO: Contador -->
+    <div class="mb-3">
+      <span id="contadorEntrenamientos" class="text-muted"></span>
     </div>
 
     <!-- Tabla -->
