--- a/app.html
+++ b/app.html
@@ -16,7 +16,6 @@
   <link rel="stylesheet" href="css/style.css" />
   <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/css/bootstrap.min.css" rel="stylesheet" />
   <link href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.10.5/font/bootstrap-icons.css" rel="stylesheet" />
-
   <script src="https://cdn.jsdelivr.net/npm/sweetalert2@11"></script>
 
   <!-- Firebase SDK compat -->
@@ -85,7 +84,7 @@
     </form>
 
     <!-- Filtros -->
-    <div class="row g-3 mb-4">
+    <div class="row g-3 mb-3">
       <div class="col-md-3">
         <select id="filtroCategoria" class="form-select">
           <option value="">Filtrar Categoría</option>
@@ -111,26 +110,18 @@
           <option value="Drills">Drills</option>
         </select>
       </div>
-      <div class="col-md-3 text-end">
+      <div class="col-md-3 d-flex justify-content-end gap-2">
+        <button id="limpiarFiltrosBtn" class="btn btn-outline-secondary">🧹 Limpiar filtros</button>
         <button id="exportBtn" class="btn btn-primary">📥 Exportar a Excel</button>
       </div>
     </div>
 
-    <!-- 🔄 NUEVO: Filtros activos -->
-    <div class="mb-3" id="filtrosActivosContainer" style="display: none;">
-      <span class="me-2 fw-bold">Filtros activos:</span>
-      <span id="filtrosActivos" class="badge bg-info text-dark me-2"></span>
-      <button id="limpiarFiltros" class="btn btn-outline-secondary btn-sm">Limpiar filtros</button>
-    </div>
+    <!-- Badges visuales de filtros activos -->
+    <div class="mb-3" id="filtrosActivos"></div>
 
-    <!-- 📊 Estadísticas visuales (Etapa 4) -->
+    <!-- 📊 Estadísticas visuales -->
     <div id="estadisticasResumen" class="row g-3 mb-4">
-      <!-- Tarjetas generadas dinámicamente -->
-    </div>
-
-    <!-- 🔢 NUEVO: Contador -->
-    <div class="mb-3">
-      <span id="contadorEntrenamientos" class="text-muted"></span>
+      <!-- Generadas dinámicamente -->
     </div>
 
     <!-- Tabla -->
